--- a/Owner.css
+++ b/Owner.css
@@ -30,27 +30,22 @@
 #user-rollover.id-3669054 .meta, #user-rollover.id-3669054 .meta, #user-rollover.id-3669054 .meta {
     height: 200px;
 }
-
 element.style {
     height: 200px;
 }
-
 #user-rollover .meta {
     min-height: 200px;
 }
-
 #chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='3669054-'] .un:before {
     content: url("http://www.aeret.eu/layoutfile/mod/users/bdt_img/ellenorzokod.png");
     top: 3px;
     left: -3px;
     position: relative;
 }
-
 #chat [data-cid^='3669054-'] .un, #chat [data-cid^='3669054-'] .un, #chat [data-cid^='3669054-'] .un, #chat [data-cid^='3669054-'] .un, #chat [data-cid^='3669054-'] .un {
     top: -3px ;
     position: relative;
 }
-
 #chat [data-cid^='3669054-'] .un:hover:after, #chat [data-cid^='3669054-'] .un:hover:after, #chat [data-cid^='3669054-'] .un:hover:after, #chat [data-cid^='3669054-'] .un:hover:after, #chat [data-cid^='3669054-'] .un:hover:after {
     content: TM Owner;
     background: url('http://www.aeret.eu/layoutfile/mod/users/bdt_img/ellenorzokod.png');
@@ -62,18 +57,15 @@ element.style {
     width: 79px;
     height: 26px;
 }
-
 #user-rollover.id-3669054 .meta, #user-rollover.id-3669054 .meta {
     height: 200px ;
 }
-
 #user-rollover.id-3669054 .meta:before, #user-rollover.id-3669054 .meta:before, #user-rollover.id-3669054 .meta:before, #user-rollover.id-3669054 .meta:before, #user-rollover.id-3669054 .meta:before {
     content: url("http://www.aeret.eu/layoutfile/mod/users/bdt_img/ellenorzokod.png");
     top: 88px;
     left: 117px;
     position: absolute;
 }
-
 #user-rollover.id-3669054 .meta:after, #user-rollover.id-3669054 .meta:after, #user-rollover.id-3669054 .meta:after, #user-rollover.id-3669054 .meta:after, #user-rollover.id-3669054 .meta:after {
     content: 'TM Owner';
     color: yellow;
@@ -81,6 +73,22 @@ element.style {
     top: 115px;
     left: 110px;
 }
+
+/*tooltip Developer*/
+#chat [data-cid^='3669054-'] .un:hover:after,
+#chat [data-cid^='3669054-'] .un:hover:after,
+#chat [data-cid^='3669054-'] .un:hover:after,
+#chat [data-cid^='3669054-'] .un:hover:after,
+#chat [data-cid^='3669054-'] .un:hover:after{
+    content: 'TM Developer';
+    background: url('https://rawgit.com/Satskhi/EDTRCS/master/images/tooltip.png');
+    padding: 3px 6px;
+    color: red;
+    bottom: 20px;
+    position: absolute;
+    left: 5px;
+    width: 79px;
+    height: 26px;
 
 /* MsiGaming | Developer = 3669054 */
 
@@ -93,7 +101,6 @@ element.style {
     border-radius: 10px;
     font-size: 10px;
 }
-
 #user-lists .list .user.id-3669054:hover .name:after, #chat [data-cid^='3669054-'] .un:hover:after, #user-lists .list .user.id-3669054:hover .name:after, #chat [data-cid^='3669054-'] .un:hover:after, #user-lists .list .user.id-3669054:hover .name:after, #chat [data-cid^='3669054-'] .un:hover:after {
     background: linear-gradient(rgba(0, 154, 141, 0.2), rgba(0, 102, 102, 0.2));
 }
@@ -101,9 +108,14 @@ element.style {
 /* MsiGaming | Developer */
 
 #user-rollover.id-3669054 .meta {
-    height: 200px ;
+    height: 200px;
 }
-
+element.style {
+    height: 200px;
+}
+#user-rollover .meta {
+    min-height: 200px;
+}
 #user-rollover.id-3669054 .meta:before {
     content: 'CSS Devs';
     top: 154px;
@@ -116,7 +128,6 @@ element.style {
     border-radius: 0px;
     font-size: 10px;
 }
-
 #user-rollover.id-3669054 .meta:after {
     content: 'TM Developer';
     color: #fff000;
