--- a/Custom.css
+++ b/Custom.css
@@ -1,9 +1,9 @@
 /*--------------------------------------------------------------------------------\
-|		chat Settings
+|    	chat Settings
  \--------------------------------------------------------------------------------*/
 
-#chat .badge-box i { 
-    transform: scale(1); 
+#chat .badge-box i {
+    transform: scale(1);
 }
 
 /*--------------------------------------------------------------------------------\
@@ -20,7 +20,7 @@
     content: "☯F E A R F O X Y☯™ | PlugThemed - Blue: V 2.9.1.1!";
     font-weight: bold;
     padding: 5px;
-    background-color: rgb(50, 50, 225);
+    background-color: rgb(255, 0, 0);
     border-radius: 20px;
 }
 
@@ -29,21 +29,29 @@
  \--------------------------------------------------------------------------------*/
 
 #chat .cm.welcome {
-    color: hsl(225, 80%, 60%);
-    box-shadow: inset 0 0 0 1px hsl(225, 50%, 30%);
+    top: 5px;
+    position: relative;
+    font-family: Arial;
+    margin-left: 0px;
+    font-size: 12px;
+    width: 300px;
+    box-sizing: border-box;
+    font-weight: bold;
+    padding: 10px;
+    background-color: rgb(0, 0, 0,9);
+    border-radius: 60px;
 }
 
 #chat .log {
-    background: linear-gradient(hsla(225, 30%, 20%, 0.8), hsla(225, 30%, 15%, 0.8)), linear-gradient(to right, hsla(0, 0%, 0%, 0), hsla(0, 0%, 100%, 0.8)) ;
-    box-shadow: inset 0 -1px 1px hsla(225, 30%, 10%, 0.8);
+    background: linear-gradient(hsla(0, 0%, 0%, 0.9), hsla(0, 0%, 0%, 0.9)), linear-gradient(to right, hsla(0, 0%, 0%, 0), hsla(0, 0%, 0%, 0.9)) ;
 }
 
 .cm strong {
-    color: #21b1af;
+    color: #ff0000;
 }
 
 .cm em {
-    color: #21b1af;
+    color: #ff0000;
 }
 
 /*--[moderation]--*/
@@ -71,7 +79,7 @@
 
 #chat .cm.emote {
     background: linear-gradient(hsla(219, 100%, 20%, 0.8), hsla(219, 100%, 10%, 0.8)), linear-gradient(to right, hsla(0, 0%, 0%, 0), hsla(0, 0%, 100%, 0.2)) ;
-    border-left: none ;
+    border-left: none;
     text-align: left;
     box-shadow: inset 0 0 0 1px hsla(220, 100%, 50%, 0.5);
     border: none ;
@@ -95,7 +103,7 @@
 }
 
 #chat .cm.mention.role-host .name, #chat .cm.mention.role-host .timestamp {
-    color: hsl(200, 100%, 50%);
+    color: #0078c7;
 }
 
 #chat .cm.mention.role-cohost {
@@ -104,7 +112,7 @@
 }
 
 #chat .cm.mention.role-cohost .name, #chat .cm.mention.role-cohost .timestamp {
-    color: hsl(210, 100%, 50%);
+    color: #0078c7;
 }
 
 #chat .cm.mention.role-manager {
@@ -113,7 +121,7 @@
 }
 
 #chat .cm.mention.role-manager .name, #chat .cm.mention.role-manager .timestamp {
-    color: #E15;
+    color: #21b1af;
 }
 
 #chat .cm.mention.role-bouncer {
@@ -122,7 +130,7 @@
 }
 
 #chat .cm.mention.role-bouncer .name, #chat .cm.mention.role-bouncer .timestamp {
-    color: #F45;
+    color: #22ad3d;
 }
 
 #chat .cm.mention.role-dj {
@@ -131,7 +139,7 @@
 }
 
 #chat .cm.mention.role-dj .name, #chat .cm.mention.role-dj .timestamp {
-    color: hsl(20, 100%, 60%);
+    color: #87a71b;
 }
 
 #chat .cm.mention.role-subscriber {
@@ -140,21 +148,21 @@
 }
 
 #chat .cm.mention.role-subscriber .name, #chat .cm.mention.role-subscriber .timestamp, #user-rollover .meta.subscriber .status span {
-    color: hsl(40, 100%, 60%);
+    color: hsl(40, 100%, 100%);
 }
 
 #chat .cm.mention {
     background: linear-gradient(hsla(77, 100%, 20%, 0.8), hsla(77, 100%, 11%, 0.8)), linear-gradient(to right, hsla(0, 0%, 0%, 0), hsla(0, 0%, 100%, 0.2)) ;
     box-shadow: inset 0 0 0 1px hsl(77, 100%, 30%);
-    border: none ;
+    border: 2px solid #ff0000;
 }
 
 #chat .cm.mention .name, #chat .cm.mention .timestamp {
-    color: hsl(77, 100%, 50%);
+    color: hsl(70, 100%, 100%);
 }
 
 #chat .cm.mention .msg .from .un {
-    color: hsl(77, 100%, 40%);
+    color: hsl(70, 100%, 100%);
 }
 
 #chat .cm.mention .msg {
